--- a/css/style.css
+++ b/css/style.css
@@ -88,3 +88,48 @@ body{
 body.active{
     overflow: hidden;
 }
+
+.container {
+    padding: 15px;
+}
+
+
+/* ---------------------------- */
+/* HEADER
+/* ---------------------------- */
+
+.header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 25px;
+    transition: var(--transition-2);
+    z-index: 2;
+}
+
+.header:active{
+    background: rgb(159, 18, 224);
+    padding: 20px;
+}
+
+.header .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-actions {
+    display: none;
+}
+
+.btn-mobile ion-icon {
+    font-size: 17px;
+    color: rgb(13, 223, 135);
+    cursor: pointer;
+}
+
+button {
+    background: transparent;
+    border: none;
+}
