--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@
 --fs-4: 24px;
 --fs-5: 20px;
 --fs-6: 18px;
---fs-7: 16px;
+--fs-7: 16px
 --fs-8: 15px;
 --fs-9: 14px;
 --fs-10: 13px;
@@ -133,3 +133,86 @@ button {
     background: transparent;
     border: none;
 }
+.navbar{
+    position: fixed;
+    top: 0;
+    right: -300px;
+    background-color:rgb(96, 29, 158);
+    width: 100%;
+    max-width: 300px;
+    height: 100%;
+    transition: 0.15s ease-in;
+    visibility: hidden;
+}
+
+.navbar.active{
+    right: 0;
+    visibility: visible;
+    transition: 0.25s ease-out;
+}
+
+.navbar-top {
+    padding: 30px 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.menu-close {
+    color: var(--white);
+    font-size: 25px;
+    padding: 5px;
+}
+
+.menu-close ion-icon{
+    --ionicon-stroke-width: 16px;
+}
+
+.navbar-list{
+    border-top: 1px solid rgb(46, 177, 127);
+    margin-bottom: 30px;
+}
+
+.navbar-link {
+color: rgb(169, 221, 25);
+font-size: var(--fs-8);
+font-weight: var(--fw-500);
+padding: 10px 25px;
+border-bottom: 1px solid hsla(192, 82%, 49%, 0.1);
+transition: 0.16s ease-in;
+}
+
+.navbar-link:hover {
+    color:rgb(231, 103, 18);
+}
+
+.navbar-social-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.navbar-social-link {
+    font-size: 20px;
+    color: rgb(230, 34, 34);
+    transition: var(--transition-1);
+}
+
+.navbar-social-link:hover {
+    color: rgb(248, 153, 10);
+}
+
+.overlay{
+    position: fixed;
+    inset: 0;
+    background: hsla(268, 89%, 29%, 0.1);
+    opacity: 0;
+    pointer-events: none;
+    transition: var(--transition-2);
+}
+
+.overlay.active{
+    pointer-events: all;
+}
+
